--- a/hmwrk-day-3/index.html
+++ b/hmwrk-day-3/index.html
@@ -25,6 +25,12 @@
 	
 		<img src="https://i.imgur.com/8spDBzs.jpg" alt="Great Sand Dunes National Park">
 
+		  <footer class="clearfix">
+    <p class="Copyright">Copyright 2017</p>
+    <p class="message">Created with &hearts; by <span class="name">Lee Titen</span>
+    </p>
+  </footer>
+
 
 
 
