--- a/hmwrk-day-3/index2.html
+++ b/hmwrk-day-3/index2.html
@@ -3,7 +3,7 @@
 <html>
 	
 	<head>
-		<title>My First Portfolio</title>
+		<title>Titenology</title>
 		<link href="https://fonts.googleapis.com/css?family=Droid+Serif|Raleway:400,500,600,700" rel="stylesheet">
 		<link href="style.css" rel="stylesheet" type="text/css">
 
@@ -19,9 +19,17 @@
 
 		<h2>About me</h2>
 
-	
+		<nav>
+			<a href="index.html">About Me!!</a>
+		</nav>
+
+
 		<img src="https://i.imgur.com/8spDBzs.jpg" alt="Great Sand Dunes National Park">
 
+  	<footer class="clearfix">
+    	<p class="Copyright">Copyright 2017</p>
+    	<p class="message">Created with &hearts; by <span class="name">Lee Titen</span> </p>
+  	</footer>
 
 
 
