Hmwrk-day-3 with updated div tag

--- a/hmwrk-day-3/index.html
+++ b/hmwrk-day-3/index.html
@@ -19,17 +19,32 @@
 
 		<h2>About me</h2>
 
+
 	<nav>
 		<a href="index2.html">To my Portfolio!!</a>
 	</nav>
 	
-		<img src="https://i.imgur.com/8spDBzs.jpg" alt="Great Sand Dunes National Park">
+		<div class="image">
+
+    		<img src="https://i.imgur.com/8spDBzs.jpg" alt="Great Sand Dunes National Park" />
+
+    	<ul>
+			<li>Former Helicopter Lead Mechanic at Air Methods</li>
+			<li>Video Game connoisseur</li>
+			<li>Spent just under 3 years mountaineering through the US</li>
+			<li>Jeep enthusiast</li>
+			<li>Chef</li>
+		</ul>
+
+
+	
+
+		</div>
 
 		  <footer class="clearfix">
-    <p class="Copyright">Copyright 2017</p>
-    <p class="message">Created with &hearts; by <span class="name">Lee Titen</span>
-    </p>
-  </footer>
+    			<p class="Copyright">Copyright 2017</p>
+    			<p class="message">Created with &hearts; by <span class="name">Lee Titen</span></p>
+  			</footer>
 
 
 
