Hmwrk-day-3 added about me paragraph

--- a/hmwrk-day-3/index.html
+++ b/hmwrk-day-3/index.html
@@ -28,23 +28,23 @@
 
     		<img src="https://i.imgur.com/8spDBzs.jpg" alt="Great Sand Dunes National Park" />
 
-    	<ul>
-			<li>Former Helicopter Lead Mechanic at Air Methods</li>
-			<li>Video Game connoisseur</li>
-			<li>Spent just under 3 years mountaineering through the US</li>
-			<li>Jeep enthusiast</li>
-			<li>Chef</li>
-		</ul>
-
-
-	
+			<p>Welcome to the Life of Titen!  My name is Lee and i would like to thank you for visiting
+			my about me page!  Lets get to know Lee - I was born in Tampa Florida and was adopted by a
+			wonderful family, the Titens.  To skip ahead past all the boring stuff I live in beautiful 
+			Castle Rock, Co and enjoy the small city living compared to a life downtown.  I have had
+			many jobs and a few careers throughout my life (to name a few, chef, EMT, Therapist/life 
+			coach and of course helicopter mechanic) but i am here today to tell you I may have found 
+			finally my niche!  I live for video games and I love computers, so I quit my latest life
+			as a helo machanic and started school at General Assembly to become a full-stack developer!
+			I'll be back regukaryl to update my progress here so come back soon to see the most
+			amazing portfolio you'll ever know!</p>
 
 		</div>
 
-		  <footer class="clearfix">
-    			<p class="Copyright">Copyright 2017</p>
-    			<p class="message">Created with &hearts; by <span class="name">Lee Titen</span></p>
-  			</footer>
+		<footer class="clearfix">
+    		<p class="Copyright">Copyright 2017</p>
+    		<p class="message">Created with &hearts; by <span class="name">Lee Titen</span></p>
+  		</footer>
 
 
 
