--- a/hmwrk-day-3/index2.html
+++ b/hmwrk-day-3/index2.html
@@ -23,15 +23,24 @@
 			<a href="index.html">About Me!!</a>
 		</nav>
 
+			<div class="image">
 
-		<img src="https://i.imgur.com/8spDBzs.jpg" alt="Great Sand Dunes National Park">
+    			<img src="https://i.imgur.com/8spDBzs.jpg" alt="Great Sand Dunes National Park" />
+
+    			<ul>
+					<li>Former Helicopter Lead Mechanic at Air Methods</li>
+					<li>Video Game connoisseur</li>
+					<li>Spent just under 3 years mountaineering through the US</li>
+					<li>Jeep enthusiast</li>
+					<li>Chef</li>
+				</ul>
+
+			</div>
 
   	<footer class="clearfix">
     	<p class="Copyright">Copyright 2017</p>
     	<p class="message">Created with &hearts; by <span class="name">Lee Titen</span> </p>
   	</footer>
-
-
 
 </body>
 </html>
